<resources>
    <string name="app_name">LICON</string>

    <!--1. 튜토리얼-->
    <string name="tut_text1">모바일로 손쉽게 즐기는 플랫폼 앨범</string>
    <string name="tut_text2">터치하여 시작하기</string>

    <!--2. 메인화면-->
    <string name="reg_text1">아직 등록되지 않은 앨범입니다.</string>
    <string name="reg_btn">등록하기</string>

    <!--3. 앨범상세-->
    <string name="album_detail_label">앨범 상세</string>
    <string name="album_detail_tap1">수록곡</string>
    <string name="album_detail_tap2">미디어</string>
    <string name="album_detail_tap3">포토카드</string>

    <!--4. 알림-->
    <string name="alert">알림</string>
    <string name="notice">공지사항</string>

    <!--5. 앨범 보관함-->
    <string name="myalbum">앨범 보관함</string>

    <!--0. 다이얼로그-->
    <string name="dialog_reg_text">앨범 등록 후 이용 가능합니다.</string>
    <string name="dialog_close">닫기</string>

    <string name="dialog_success">등록 성공</string>
    <string name="dialog_success2">앨범 등록이 완료되었습니다!</string>
    <string name="dialog_success_btn">앨범 바로가기</string>
    <string name="dialog_ok">확인</string>

    <string name="dialog_open">열기</string>

    <string name="dialog_fail">등록 실패</string>
    <string name="dialog_fail2">잠시 후 다시 시도해주세요.</string>

    <string name="nfc_text">Device를 NFC 태그 근처에 두세요.</string>
    <string name="nfc_success">올바른 NFC 카드입니다.</string>
    <string name="nfc_fail">올바른 NFC 카드가 아닙니다.</string>

    <string name="nfc_text1">유효하지않은 NFC 카드입니다.</string>
    <string name="nfc_text2">NFC 카드가 정상적으로 등록되었습니다.</string>
    <string name="nfc_text3">이미 등록된 NFC 카드입니다.</string>

    <string name="nfc_message1">하나 이상의 태그가 감지되었으므로, 모든 태그를 제거하고 다시 시도하세요.</string>
    <string name="nfc_message2">태그에 연결할 수 없습니다.</string>
    <string name="nfc_message3">태그의 NDEF 상태를 조회 할 수 없습니다.</string>
    <string name="nfc_message4">태그에서 NDEF를 읽지 못했습니다.</string>
    <string name="nfc_message5">NFC 카드가 인식되었습니다.</string>

    <string name="capture_text1">캡쳐 감지</string>
    <string name="capture_text2">무단으로 유포/공유 시\n법적인 제재를 받을 수 있으니 주의해 주세요.</string>

    <string name="youtube1">외부 앱</string>
    <string name="youtube2">이 영상은 YouTube에서 재생됩니다.</string>
    <string name="youtube3">다음부터 묻지 않기</string>

    <string name="download_media">Media 파일 다운로드 중</string>
    <string name="download_photo">Photo 파일 다운로드 중</string>
    <string name="download_mp3">mp3 파일 다운로드 중</string>
    <string name="download_fail">다운로드 실패</string>
    <string name="dialog_dup">앨범 중복</string>
    <string name="dialog_dup_text">이미 등록된 앨범입니다.\n재등록은 고객센터를 통해 문의해주세요.</string>
    <string name="dialog_scan">스캔 준비 완료</string>
    <string name="nfc_no_device">NFC 지원하지 않는 기기입니다.</string>
    <string name="shuffle_on">셔플 선택</string>
    <string name="shuffle_off">셔플 해제</string>
    <string name="play_one">한곡 반복 재생</string>
    <string name="download_need">다운로드 필요</string>
    <string name="download_img_fail">이미지 다운로드 실패</string>
    <string name="download_img_success">이미지 다운로드 성공</string>
    <string name="play_all">전체 반복 재생</string>
    <string name="play_no_repeat">반복 없음</string>
    <string name="download_file">파일 다운로드 중</string>
    <string name="album_info">앨범 정보</string>
    <string name="dialog_btn_customer">고객센터</string>
    <string name="album_intro">앨범 소개</string>


</resources>
