<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="278dp"
    android:layout_height="223dp"
    android:background="@drawable/dialog_corner">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/suitsemibold"
        android:text="@string/youtube1"
        android:textColor="#333333"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/suitsemibold"
        android:text="@string/youtube2"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#333333"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentText">

        <CheckBox
            android:id="@+id/youtubeCheckbox"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/checkbox_youtube"
            android:button="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/dontAskText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dontAskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube3"
            android:textColor="#33000000"
            android:fontFamily="@font/suitsemibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/closeYoutubeBtn"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:background="@drawable/dialog_bottom_corner_half_gray"
        android:fontFamily="@font/suitregular"
        android:text="@string/dialog_close"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/openYoutubeBtn"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/dialog_bottom_corner_half_blue"
        android:fontFamily="@font/suitregular"
        android:text="@string/dialog_open"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>