<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="278dp"
    android:layout_height="180dp"
    android:background="@drawable/dialog_corner">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/suitregular"
        android:text="@string/dialog_reg_text"
        android:textColor="#333333"
        android:textSize="15dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/close_btn"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:background="@drawable/dialog_bottom_corner_half_gray"
        android:fontFamily="@font/suitregular"
        android:text="@string/dialog_close"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/dialog_bottom_corner_half_blue"
        android:fontFamily="@font/suitregular"
        android:text="@string/dialog_ok"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>